--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
 
 :root{
     --primarycolor: #3B82F6; 
-    --graycolor: #9CA3AF; 
+    --graycolor: #E5E7EB; 
+    --darkgray: #6B7280;
 }
 
 hr{
@@ -13,6 +14,10 @@ hr{
 body{
     font-family: 'Nunito', sans-serif;
     margin: 0rem;
+}
+
+.margin{
+    padding: 2rem;
 }
 
 .container{
@@ -25,6 +30,7 @@ body{
 }
 
 .links{
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
@@ -34,6 +40,7 @@ body{
     border-radius: 0.5rem;
     color: white;
     border: 1px solid var(--primarycolor);
+    padding-top: 0.25rem;
 }
 
 .links-secondary{
@@ -41,6 +48,7 @@ body{
     border-radius: 0.5rem;
     color: var(--primarycolor);
     border: 1px solid var(--primarycolor);
+    padding-top: 0.25rem;
 }
 
 .lists-non-bullet{
@@ -61,6 +69,7 @@ body{
 
 .nav-brand{
     font-weight: bold;
+    font-size: larger;
 }
 
 .nav .links{
@@ -73,6 +82,7 @@ body{
 
 .links-active{
     font-weight: bold;
+    font-size: larger;
 }
 
 .hero{
@@ -86,7 +96,7 @@ body{
 }
 
 .hero-heading{
-    color: var(--graycolor);
+    color: var(--darkgray);
     text-align: center;
     padding-top: 1rem;
 }
@@ -105,6 +115,12 @@ body{
     background-color: var(--graycolor);
 }
 
+.section .h1{
+    font-weight: bolder;
+    font-size: xx-large;
+    text-align: center;
+}
+
 .footer{
     background-color: var(--primarycolor);
     padding: 2rem 1rem;
@@ -114,8 +130,8 @@ body{
 }
 
 .footer-header{
-    font-weight: bold;
-    font-size: large;
+    font-weight: bolder;
+    font-size: x-large;
 }
 
 .footer-ul-links{
